# gray-encoder-disk-generator

./: .gitignore  BLOG_PART_2.html  BLOG_PART_2.md  FIXES_2025-10-12.md  FIX_SUMMARY.md  LICENSE  Makefile  README.md  launch_gui.py  pyproject.toml  verify_fixes.py
.github/workflows/: python-package.yml
docs/: ARCHITECTURE.md
docs/latex/: encoder_article.aux  encoder_article.fdb_latexmk  encoder_article.fls  encoder_article.out  encoder_article.tex
src/: __init__.py  apply_optimization.py  encoder_generator.py  genetic_optimizer.py  gui_encoder_controller.py
src/geometry/: __init__.py  arc_utils.py  assembly.py  track_generator.py
src/gray_code/: __init__.py  converter.py  validator.py
src/utils/: __init__.py  parameters.py  parameters.py.backup  printer_constraints.py
tests/: test_assembly.py  test_geometry.py  test_gray_code.py
